Fixed stretch width of machine design section

--- a/public/home/assets/style.css
+++ b/public/home/assets/style.css
@@ -1292,7 +1292,6 @@ body.menu-open .mobile-menu {
 }
 
 .capstone-button:hover {
-    background: var(--glow);
     transform: translateY(-2px);
 }
 
@@ -1387,6 +1386,10 @@ body.menu-open .mobile-menu {
     margin-bottom: 20px;
 }
 
+.design-project {
+    width: 100%;
+}
+
 .design-project-header {
     width: fit-content;
     margin-top: 2rem;
@@ -1447,9 +1450,9 @@ body.menu-open .mobile-menu {
 }
 
 .grade {
-    display: block;
+    display: flex;
+    justify-content: flex-start;
     margin: 1rem auto;
-    padding: 1rem 2rem;
 }
 
 @media (max-width: 1142px) {
